--- a/compose.yml
+++ b/compose.yml
@@ -5,4 +5,6 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ./:/app
-    command: sleep infinity
+    ports:
+      - 3000:3000
+    tty: true
